# gsdd-webassembly

./: .gitignore  Makefile  README.md  doc.go  go.mod  go.sum
assets/: httpchan_go_wasm.js  index.html  msgs.js
context/: RustWasm.Dockerfile
hchan/: api.go  rw_js.go  rw_native.go
hchan/cmd/hchan/: main.go
hchan/server/: server.go  server_test.go
runner/cmd/runner/: main.go
runner/rust/dummycli/: Cargo.toml
runner/rust/dummycli/src/: lib.rs
ui/: domNode.go  main.go  render_fallback.go  render_js.go
